# fatcat-cli

./: .gitlab-ci.yml  README.md  fatcat-openapi3.yml
rust/: .gitignore  Cargo.toml  Makefile  codegen_openapi.sh
rust/fatcat-cli/: Cargo.toml  README.md  TODO  binary_size.md  fatcat-cli.1  fatcat-cli.1.scdoc  plan.txt
rust/fatcat-cli/src/: api.rs  entities.rs  lib.rs  main.rs  search.rs  specifier.rs
rust/fatcat-openapi/: Cargo.toml  Cargo.toml.codegen  README.md
rust/fatcat-openapi/docs/: ContainerEntity.md  CreatorEntity.md  Editgroup.md  EditgroupAnnotation.md  EntityEdit.md  FileEntity.md  FilesetEntity.md  FilesetFile.md  ReleaseContrib.md  ReleaseEntity.md  ReleaseRef.md  WebcaptureEntity.md  WorkEntity.md  default_api.md
rust/fatcat-openapi/examples/server/: server.rs
rust/fatcat-openapi/src/: context.rs  lib.rs  models.rs
rust/fatcat-openapi/src/client/: mod.rs
rust/fatcat-openapi/src/server/: mod.rs
